[gd_scene load_steps=11 format=2]

[ext_resource path="res://art/title.png" type="Texture" id=1]
[ext_resource path="res://art/buttons/button_newgame_mouse.png" type="Texture" id=2]
[ext_resource path="res://TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://art/buttons/button_fullscreen_mouse.png" type="Texture" id=4]
[ext_resource path="res://art/buttons/button_newgame.png" type="Texture" id=5]
[ext_resource path="res://art/buttons/button_fullscreen.png" type="Texture" id=6]
[ext_resource path="res://art/buttons/button_options.png" type="Texture" id=7]
[ext_resource path="res://art/buttons/button_options_mouse.png" type="Texture" id=8]
[ext_resource path="res://art/buttons/button_help.png" type="Texture" id=9]
[ext_resource path="res://art/buttons/button_help_mouse.png" type="Texture" id=10]

[node name="TitleRoot" type="Node"]
script = ExtResource( 3 )

[node name="TitleSplash" type="TextureRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 14.0
margin_right = -14.0
margin_bottom = -14.0
rect_min_size = Vector2( 610, 330 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 932.0
margin_bottom = 512.0

[node name="LeftScreenPad" type="Control" parent="MarginContainer/HBoxContainer"]
margin_right = 353.0
margin_bottom = 512.0
rect_min_size = Vector2( 353, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 357.0
margin_right = 437.0
margin_bottom = 512.0

[node name="TopControlPad" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 80.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 192 )
size_flags_vertical = 3

[node name="NewGameButton" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 208.0
margin_right = 80.0
margin_bottom = 232.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 2 )

[node name="OptionsButton" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 236.0
margin_right = 80.0
margin_bottom = 260.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="HelpButton" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 264.0
margin_right = 80.0
margin_bottom = 288.0
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="FullScreenButton" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 292.0
margin_right = 80.0
margin_bottom = 316.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 4 )

[node name="BotControlPad" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 320.0
margin_right = 80.0
margin_bottom = 512.0
rect_min_size = Vector2( 0, 192 )

[node name="RightScreenPad" type="Control" parent="MarginContainer/HBoxContainer"]
margin_left = 441.0
margin_right = 932.0
margin_bottom = 512.0
size_flags_horizontal = 3

[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_mouse_entered"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_mouse_entered"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/HelpButton" to="." method="_on_HelpButton_mouse_entered"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/FullScreenButton" to="." method="_on_FullScreenButton_mouse_entered"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/FullScreenButton" to="." method="_on_FullScreenButton_pressed"]
